--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>GitHub User Info</title>
+    <title>Welcome to the GitHub Repository Info App</title>
 </head>
 <body>
-    <h1>Welcome to My GitHub Info App</h1>
-    <p>Enter a GitHub username to get user information:</p>
-    <form action="/get_user_info" method="POST">
-        <label for="username">GitHub Username:</label>
-        <input type="text" id="username" name="username" required>
-        <input type="submit" value="Get User Info">
-    </form>
+    <h1>Welcome to the GitHub Repository Info App</h1>
+    <p>This application allows you to access information from GitHub repositories.</p>
+    <p>Use the navigation menu to access different functionalities.</p>
 </body>
 </html>
